first steps to add x11 support

--- a/project.json
+++ b/project.json
@@ -9,7 +9,7 @@
     "Aero3": {
 			"type": "prepare",
       "script-dir": "./",
-			"exec": ["python ./BuildDep.py"]
+			"exec": ["python ./BuildDep.py version=0.0.2-SNAPSHOT"]
 		},
 
     "Linux-HelloWorld-Aero3": {
