Code Refactored and x11 input working

--- a/project.json
+++ b/project.json
@@ -11,10 +11,9 @@
       "script-dir": "./",
 			"exec": ["python ./BuildDep.py version=0.0.2-SNAPSHOT"]
 		},
-
     "X11-HelloWorld-Aero3": {
       "name": "HelloWorld-Aero3",
-      "linked-libraries" : [ "GL", "X11", "Xrandr", "m" ],
+      "linked-libraries" : [ "GL", "X11", "m" ],
       "type": "executable", 
       "sources": [ "test/01-HelloWindow/**" ] 
     },
